--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
             margin-bottom: 10px;
         }
 
-        /* ENHANCED TAGLINE */
         .tagline {
             margin-top: 6px;
             font-size: 16px;
@@ -189,7 +188,6 @@
 
     <div class="form-content">
         <div class="header">
-            <!-- Replace logo.png with your actual logo file or URL -->
             <img src="logo.png" alt="Efzin Fresh Logo" class="logo">
             <div class="tagline">The Art of Living Well.</div>
         </div>
@@ -247,6 +245,16 @@
     const thankYou = document.getElementById('thankYou');
     const submitBtn = document.getElementById('submitBtn');
 
+    const nameInput = document.getElementById('name');
+    const emailInput = document.getElementById('email');
+    const phoneInput = document.getElementById('phone');
+    const messageInput = document.getElementById('message');
+
+    const nameError = document.getElementById('nameError');
+    const emailError = document.getElementById('emailError');
+    const phoneError = document.getElementById('phoneError');
+    const messageError = document.getElementById('messageError');
+
     form.addEventListener('submit', async (e) => {
         e.preventDefault();
 
@@ -255,17 +263,19 @@
         );
 
         const data = {
-            name: name.value.trim(),
-            email: email.value.trim(),
-            phone: phone.value.trim(),
-            message: message.value.trim(),
+            name: nameInput.value.trim(),
+            email: emailInput.value.trim(),
+            phone: phoneInput.value.trim(),
+            message: messageInput.value.trim(),
             timestamp: new Date().toISOString()
         };
 
         let valid = true;
 
         if (!data.name) { nameError.classList.add('active'); valid = false; }
-        if (!data.email) { emailError.classList.add('active'); valid = false; }
+        if (!data.email || !validateEmail(data.email)) {
+            emailError.classList.add('active'); valid = false;
+        }
         if (!data.phone) { phoneError.classList.add('active'); valid = false; }
         if (!data.message) { messageError.classList.add('active'); valid = false; }
 
@@ -274,17 +284,30 @@
         submitBtn.disabled = true;
         submitBtn.textContent = 'Submitting...';
 
-        await fetch(FORM_SUBMISSION_URL, {
-            method: 'POST',
-            mode: 'no-cors',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify(data)
-        });
+        try {
+            await fetch(FORM_SUBMISSION_URL, {
+                method: 'POST',
+                mode: 'no-cors',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(data)
+            });
 
-        formContent.classList.add('hidden');
-        thankYou.classList.add('active');
-        form.reset();
+            await new Promise(resolve => setTimeout(resolve, 1000));
+
+            formContent.classList.add('hidden');
+            thankYou.classList.add('active');
+            form.reset();
+
+        } catch (err) {
+            alert('Submission failed. Please try again.');
+            submitBtn.disabled = false;
+            submitBtn.textContent = 'Submit Feedback';
+        }
     });
+
+    function validateEmail(email) {
+        return /^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email);
+    }
 </script>
 
 </body>
